# krewcli

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.gemini/: settings.json
docker/: start-krewcli-compose.sh
docs/: architecture.md  commands.md  introduction.md  user-guide.md
src/krewcli/: __main__.py  cli.py  cli_onboard.py  cli_wallet.py  config.py  cookbook_repo.py  erc8004.py  gateway.py  gateway_helpers.py  gateway_runtime.py  gateway_tasks.py  interactive.py  mint_agents.py  recipe_context.py  repo_diagram.py  session_key.py  sse_watcher.py  userop.py
src/krewcli/a2a/: card.py  executor.py  gateway_server.py  plan_endpoint.py  server.py  spawn_manager.py
src/krewcli/agents/: base.py  bub_agent.py  claude_agent.py  code_refs.py  codex_agent.py  event_sink.py  local_cli.py  models.py  presets.py  registry.py
src/krewcli/auth/: __init__.py  dependencies.py  device_flow.py  middleware.py  models.py  pages.py  password.py  routes.py  service.py  siwe_login.py  token_store.py  tokens.py  wallet.py
src/krewcli/backend/: __init__.py  _delegate.py  bub.py  claude.py  codex.py  echo.py  gemini.py  protocol.py  registry.py
src/krewcli/bridge/: __init__.py  canonical.py  codex_rollout.py  codex_watcher.py  env_collector.py  forwarder.py
src/krewcli/cli/: __init__.py  claim.py  daemon.py  gateway_cmds.py  join.py  login.py  logout.py  tasks.py  up.py  whoami.py
src/krewcli/client/: krewhub_client.py
src/krewcli/daemon/: __init__.py  delegate_handler.py  execenv.py  harness.py  loop.py  planner.py  recovery.py  sandbox_validator.py  session.py  supervisor.py
src/krewcli/gateway/: __init__.py  identity.py  worktree.py
src/krewcli/hooks/: config_writer.py  listener.py  scoped_config.py  spawner.py  types.py
src/krewcli/mcp_servers/: __init__.py  bridge.py  hitl_tool.py
src/krewcli/node/: __init__.py  agent.py
src/krewcli/presence/: heartbeat.py
src/krewcli/runtime/: __init__.py  interface.py  job.py
src/krewcli/watch/: client.py  (+1 more)
tests/: test_a2a.py  test_agents.py  test_agents_base.py  test_agents_local_cli.py  test_auth_http_integration.py  test_auth_integration.py  test_auth_middleware.py  test_auth_models.py  test_auth_pages.py  test_auth_password.py  test_auth_routes.py  test_auth_token_store.py  test_auth_tokens.py  test_backend.py  test_bridge_mcp.py  test_claude_backend_mcp.py  test_clean_code.py  test_cli_auth.py  test_cli_commands.py  test_cli_join.py  test_cli_package.py  test_cli_resolve_mode.py  test_cli_tasks.py  test_codex_gemini_delegate_wiring.py  test_config.py  test_cookbook_repo.py  test_daemon.py  test_daemon_supervisor.py  test_delegate_handler.py  test_event_sink.py  test_event_sink_telemetry.py  test_execenv_sandbox.py  test_gateway.py  test_gateway_helpers.py  test_gateway_modules.py  test_gateway_worktree.py  test_heartbeat.py  test_integration.py  test_interactive.py  test_krewcli.py  (+16 more)
tests/daemon/: test_spawn_no_env_merge.py
tests/mcp_servers/: conftest.py  test_bridge_hitl_registered.py  test_hitl_tool.py
(+44 files in other folders)
