[project]
name = "krewcli"
version = "0.1.0"
description = "KrewCLI — A2A agent server for Cookrew, wrapping local coding agents"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.2.0",
    "pydantic-ai>=0.2.0",
    "httpx>=0.28.0",
    "click>=8.1.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
krewcli = "krewcli.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
