[project]
name = "krewcli"
version = "0.2.0"
description = "KrewCLI — managed agent daemon for Cookrew"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "click>=8.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "PyJWT>=2.9.0",
    "bcrypt>=4.0.0",
    "siwe>=4.0.0",
    "eth-account>=0.13.0",
    "eth-abi>=5.0.0",
    "web3>=7.0.0",
    "republic>=0.5.4",
    "krewwatch",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
krewcli = "krewcli.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv.sources]
krewwatch = { path = "../krewwatch", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
